# jmsd_tpc_sdl

./: .gitmodules  CMakeLists.txt  README.md
_documentation/: windows-build.txt
_tpc_cmake_settings/: tpc-sdl-lib-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-sdl-lib-set-linux-compiler-settings.cmake  tpc-sdl-lib-set-windows-compiler-settings.cmake
tpc_sdl/: CMakeLists.txt
